# ucv_ate_si_lab_4

./: README.md  pyproject.toml
lab4_api_cv/api/: main.py
lab4_api_cv/services/: image_service.py
